--- a/Makefile.win
+++ b/Makefile.win
@@ -4,15 +4,14 @@
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-RES      = autoupdate-iptv_private.res
-OBJ      = main.o $(RES)
-LINKOBJ  = main.o $(RES)
+OBJ      = main.o
+LINKOBJ  = main.o
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/winlibs-x86_64-posix-seh-gcc-10.1.0-llvm-10.0.0-mingw-w64-7.0.0-r3/lib" -L"C:/Program Files (x86)/Dev-Cpp/winlibs-x86_64-posix-seh-gcc-10.1.0-llvm-10.0.0-mingw-w64-7.0.0-r3/x86_64-w64-mingw32/lib" -static-libgcc -m64 -s
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/winlibs-x86_64-posix-seh-gcc-10.1.0-llvm-10.0.0-mingw-w64-7.0.0-r3/include" -I"C:/Program Files (x86)/Dev-Cpp/winlibs-x86_64-posix-seh-gcc-10.1.0-llvm-10.0.0-mingw-w64-7.0.0-r3/x86_64-w64-mingw32/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/winlibs-x86_64-posix-seh-gcc-10.1.0-llvm-10.0.0-mingw-w64-7.0.0-r3/include" -I"C:/Program Files (x86)/Dev-Cpp/winlibs-x86_64-posix-seh-gcc-10.1.0-llvm-10.0.0-mingw-w64-7.0.0-r3/x86_64-w64-mingw32/include"
-BIN      = autoupdate-iptv-win64.exe
+BIN      = autoupdate-iptv.exe
 CXXFLAGS = $(CXXINCS) -ansi -fno-asm -mavx -O3 -m64 -std=gnu++11 -Wall -Wfatal-errors -march=skylake -mtune=skylake -msse -msse3
-CFLAGS   = $(INCS) -ansi -fno-asm -mavx -O3 -m64 -std=gnu++11 -Wall -Wfatal-errors -march=skylake -mtune=skylake -msse -msse3
+CFLAGS   = $(INCS) -ansi -fno-asm -mavx -O3 -m64 -std=gnu++11 -Wall -Wfatal-errors
 RM       = rm.exe -f
 
 .PHONY: all all-before all-after clean clean-custom
@@ -27,7 +26,3 @@ $(BIN): $(OBJ)
 
 main.o: main.cpp
 	$(CPP) -c main.cpp -o main.o $(CXXFLAGS)
-
-autoupdate-iptv_private.res: autoupdate-iptv_private.rc 
-	$(WINDRES) -i autoupdate-iptv_private.rc --input-format=rc -o autoupdate-iptv_private.res -O coff 
-
