--- a/Makefile.win
+++ b/Makefile.win
@@ -9,7 +9,7 @@ LINKOBJ  = main.o
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/winlibs-x86_64-posix-seh-gcc-10.1.0-llvm-10.0.0-mingw-w64-7.0.0-r3/lib" -L"C:/Program Files (x86)/Dev-Cpp/winlibs-x86_64-posix-seh-gcc-10.1.0-llvm-10.0.0-mingw-w64-7.0.0-r3/x86_64-w64-mingw32/lib" -static-libgcc -m64 -s
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/winlibs-x86_64-posix-seh-gcc-10.1.0-llvm-10.0.0-mingw-w64-7.0.0-r3/include" -I"C:/Program Files (x86)/Dev-Cpp/winlibs-x86_64-posix-seh-gcc-10.1.0-llvm-10.0.0-mingw-w64-7.0.0-r3/x86_64-w64-mingw32/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/winlibs-x86_64-posix-seh-gcc-10.1.0-llvm-10.0.0-mingw-w64-7.0.0-r3/include" -I"C:/Program Files (x86)/Dev-Cpp/winlibs-x86_64-posix-seh-gcc-10.1.0-llvm-10.0.0-mingw-w64-7.0.0-r3/x86_64-w64-mingw32/include"
-BIN      = autoupdate-iptv.exe
+BIN      = autoupdate-iptv-win64.exe
 CXXFLAGS = $(CXXINCS) -ansi -fno-asm -mavx -O3 -m64 -std=gnu++11 -Wall -Wfatal-errors -march=skylake -mtune=skylake -msse -msse3
 CFLAGS   = $(INCS) -ansi -fno-asm -mavx -O3 -m64 -std=gnu++11 -Wall -Wfatal-errors
 RM       = rm.exe -f
