--- a/AutoUpdateIPTV.cbp
+++ b/AutoUpdateIPTV.cbp
@@ -21,10 +21,18 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-O2" />
+					<Add option="-march=skylake" />
+					<Add option="-O3" />
+					<Add option="-Wfatal-errors" />
+					<Add option="-Wall" />
+					<Add option="-m64" />
 				</Compiler>
 				<Linker>
+					<Add option="-O3" />
 					<Add option="-s" />
+					<Add option="-static-libstdc++" />
+					<Add option="-static-libgcc" />
+					<Add option="-m64" />
 				</Linker>
 			</Target>
 		</Build>
